--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "nodemon --ignore assets/images/* index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Syed Fahad Junaid",
+  "author": "Branding 360 Neo Private Limited",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -21,6 +21,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "joi": "^17.12.1",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
