--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3",
     "path": "^0.12.7",
+    "redis": "^4.7.0",
     "uuid": "^9.0.1",
     "validation": "^0.0.1"
   }
